--- a/login/login.html
+++ b/login/login.html
@@ -7,11 +7,20 @@
     <title>login</title>
     <link href="./style.css" type="text/css" rel="stylesheet">
 </head>
+<!--<body oncontextmenu="return false" ondragstart="return false" onselectstart="return false"> -->
 <body>
+
+    
     <form class="login-form">
         <input required maxlength="15" type="text" placeholder = "what is your name"/>
         <input type="submit" value="Login">
     </form>
+    <div class="ToNaver">
+        <a href="https://www.naver.com">Go to naver</a>
+    </div>
+    <div class="SimpleNotice">
+        <p>simpleNotice_Test(prevent copy)</p>
+    </div>
     <script src="app.js"></script>
     
 </body>
