saving username on localStorage

--- a/login/login.html
+++ b/login/login.html
@@ -11,10 +11,13 @@
 <body>
 
     
-    <form class="login-form">
-        <input required maxlength="15" type="text" placeholder = "what is your name"/>
+    <form class="hidden login-form">
+        <input required maxlength="15" type="text" placeholder = "what is your name" id="username"/>
         <input type="submit" value="Login">
     </form>
+    <h1 class="hidden greeting">
+
+    </h1>
     <div class="ToNaver">
         <a href="https://www.naver.com">Go to naver</a>
     </div>
