--- a/login/login.html
+++ b/login/login.html
@@ -23,6 +23,10 @@
     <div class="hidden resetName">
         <button type="button">ResetName</button>
     </div>
+    <form class="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter" required/>
+    </form>
+    <ul class="todo-list"></ul>
     <div class = "quote">
         <span></span>
 
@@ -43,6 +47,7 @@
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/weather.js"></script>
+    <script src="js/todo.js"></script>
 
     
 </body>
